{
    "name": "Controller",
    "maps": [
        {
            "name": "Player",
            "id": "79ddc0ec-2315-41a4-9d2a-743e83ce1f08",
            "actions": [
                {
                    "name": "TouchStart",
                    "type": "PassThrough",
                    "id": "b908890f-8bd2-4977-bafb-4c277fd8bc9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchEnd",
                    "type": "PassThrough",
                    "id": "5f5fd711-6446-49db-ba98-3e466b539de2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "TouchMove",
                    "type": "PassThrough",
                    "id": "94cf1a93-dd07-4630-9c0e-3f51b4b5c54c",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7c6b15cb-e1c0-4a98-b30c-68431828feb4",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ab9ca53-b180-422d-b593-e6c40fc2e342",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19d12fb9-9b70-4a98-9cf3-eb48cf1cb5a8",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9793fe2-76e3-4bb0-80c0-860c3f61673c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2554f88c-2ffa-4c36-9b30-f8e3448e303e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32a5f2dd-f9d3-4571-9b5b-50279c7225ca",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}